# HDMI-DummyDisplay-Switch

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
docs/: flashing-over-usb.md  pcb-pin-definitions.md
docs/features/: USB-CDC.md  bare-metal-usb-cdc.md  logging-over-usb.md
src/: main.rs
