[package]
name = "hdmi-dummy-display-switch"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal.git", features = ["ch32v203g6u6", "memory-x", "embassy", "rt", "time-driver-tim2"], default-features = false }
embassy-executor = { version = "0.7.0", features = ["arch-riscv32", "executor-thread"] }
embassy-time = "0.4.0"
panic-halt = "1.0"

[profile.release]
strip = false
lto = true
opt-level = "z"
