[package]
name = "hdmi-dummy-display-switch"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bare metal dependencies - no HAL, no embassy
ch32v2 = { version = "0.1.6", features = ["ch32v20x", "rt"] }
qingke = "0.2"
qingke-rt = { version = "0.2", features = ["v4"] }
panic-halt = "1.0"
critical-section = "1.1"
vcell = "0.1"

[profile.release]
strip = false
lto = true
opt-level = "z"
